--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,10 @@ h1 {
 }
 
 button {
+  cursor: pointer;
+}
+
+.buttonDashboard {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.1em;
@@ -64,7 +68,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+.buttonDashboard:hover {
   border-color: #7aff70;
 }
 
